--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,12 @@
 /* ==========================================================================
-   Основные стили сайта
-   ========================================================================== */
+	 Основные стили сайта
+	 ========================================================================== */
 
 /* Typography */
 html, body {margin:0px; padding:0px; font-family:'Arial'; font-size:14px; line-height:18px; color:#000; background:#fff; height:100%;}
 html.fancybox-lock {overflow:visible !important;}
 html.fancybox-lock body {position:relative;}
-a {color:#000000; outline:none; text-decoration:underline;}
+a {color:#000000; outline:none; text-decoration:none;}
 a:hover {text-decoration:none;}
 a img {border:none;}
 img {vertical-align:middle;}
@@ -28,46 +28,54 @@ table td, table th {margin:0px; padding:0px; border:none; border-collapse:collap
 
 
 /* General */
-main {min-height:100%; min-width:990px; position:relative;}
+main {min-height:100%; min-width:320px; position:relative;}
 .clear.clear-footer {height:100px;}
-.site-wrap {width:990px; margin:0px auto;}
+.site-wrap {width:320px; margin:0px auto; padding: 0 13px;}
 
 
 /* Header */
-header {background:#efefef; width:100%; height:100px;}
+header {background:#efefef; width:100%;}
 
 
 /* Footer */
-footer {background:#efefef; width:100%; height:100px; margin:-100px 0px 0px 0px;}
+footer {background:#efefef; width:100%; margin:-100px 0px 0px 0px;}
 
 
 
 /* ==========================================================================
-   Вспомогательные стили
-   ========================================================================== */
+	 Вспомогательные стили
+	 ========================================================================== */
 
 .show {display:block;}
 .hide {display:none;}
 .invisible {visibility:hidden;}
 .clear {margin:0px; padding:0px; font-size:0px; line-height:0px; height:1px; clear:both; float:none;}
-.clearfix {display:inline-block; //display:inline; //zoom:1; width:100%;}
+.unstyle-list {margin: 0;list-style-type: none;}
+/*.clearfix {display:inline-block; //display:inline; //zoom:1; width:100%;}*/
+.clearfix:after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+
 ::-ms-reveal {display:none;}
 
 
 /* ==========================================================================
-   Стили для печати
-   ========================================================================== */
+	 Стили для печати
+	 ========================================================================== */
 
 @media print {
-    *, *:before, *:after, *:first-letter, *:first-line {background: transparent !important; color: #000 !important; box-shadow: none !important; text-shadow: none !important;}
-    a, a:visited {text-decoration: underline;}
-    a[href]:after {content: " (" attr(href) ")";}
-    abbr[title]:after {content: " (" attr(title) ")";}
-    a[href^="#"]:after, a[href^="javascript:"]:after {content: "";}
-    pre, blockquote {border: 1px solid #999; page-break-inside: avoid;}
-    thead {display: table-header-group;}
-    tr, img {page-break-inside: avoid;}
-    img {max-width: 100% !important;}
-    p, h2, h3 {orphans: 3; widows: 3;}
-    h2, h3 {page-break-after: avoid;}
+		*, *:before, *:after, *:first-letter, *:first-line {background: transparent !important; color: #000 !important; box-shadow: none !important; text-shadow: none !important;}
+		a, a:visited {text-decoration: underline;}
+		a[href]:after {content: " (" attr(href) ")";}
+		abbr[title]:after {content: " (" attr(title) ")";}
+		a[href^="#"]:after, a[href^="javascript:"]:after {content: "";}
+		pre, blockquote {border: 1px solid #999; page-break-inside: avoid;}
+		thead {display: table-header-group;}
+		tr, img {page-break-inside: avoid;}
+		img {max-width: 100% !important;}
+		p, h2, h3 {orphans: 3; widows: 3;}
+		h2, h3 {page-break-after: avoid;}
 }
