--- a/css/blocks/mailing.css
+++ b/css/blocks/mailing.css
@@ -1,9 +1,20 @@
-.block-mailing .mailing-title {
-	font-family: 'PT Sans Caption', sans-serif;
+.block-mailing {
+	background-color: #85b54a;
+}
+
+.mailing-title {
+	font-family: 'FedraSansPro-Normal', sans-serif;
 	font-size: 14px;
 	line-height: 28px;
-	font-weight: bold;
 	text-align: center;
 	text-transform: uppercase;
 	padding: 32px 0 25px;
+}
+
+.mailing-submit {
+	font-family: 'FedraSansPro-Light', sans-serif;
+	font-size: 14px;
+	line-height: 28px;
+	text-align: center;
+	text-transform: uppercase;
 }
