--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,10 +1,19 @@
 /* ==========================================================================
-   Файл для подключения шрифтов
-   Генератор шрифтов - https://www.web-font-generator.com
-   Генератор шрифтов - http://www.fontsquirrel.com/tools/webfont-generator
-   ========================================================================== */
+	 Файл для подключения шрифтов
+	 Генератор шрифтов - https://www.web-font-generator.com
+	 Генератор шрифтов - http://www.fontsquirrel.com/tools/webfont-generator
+	 ========================================================================== */
 
 
+@font-face {
+	font-family: "FedraSansPro-Light";
+	src: url("../fonts/FedraSansPro-Light.woff") format("woff");
+ }
+
+@font-face {
+	font-family: "FedraSansPro-Normal";
+	src: url("../fonts/FedraSansPro-Normal.woff") format("woff");
+	}
 
 
 
