--- a/css/blocks/content.css
+++ b/css/blocks/content.css
@@ -1,3 +1,11 @@
 .block-content {
 	background-color: #ecf1f4;
 }
+
+.content-appointment {
+	margin-bottom: 33px;
+}
+
+.content-all-services {
+	margin-bottom: 32px;
+}
