--- a/css/blocks/breadcrumbs.css
+++ b/css/blocks/breadcrumbs.css
@@ -1,16 +1,19 @@
 .block-breadcrumbs {
+	padding: 21px 0 15px;
 	font-family: 'PT Sans Caption', sans-serif;
-	font-size: 14px;
+	font-size: 13px;
 	line-height: 26px;
 	font-weight: bold;
 	color: #000;
 }
 
 .block-breadcrumbs span {
+	margin-left: 4px;
 	text-transform: uppercase;
 }
 
 .breadcrumbs-link {
+	margin-right: 6px;
 	color: #80c343;
 	text-transform: uppercase;
 	border-bottom: 1px solid #80c343;
