--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -2,9 +2,10 @@
 	background-color: #cdcdcd;
 }
 
-.block-footer .footer-list-link {
+.footer-list-link {
+	position: relative;
 	display: block;
-	padding: 24px 0 20px;
+	padding: 17px 0 14px;
 	font-family: 'PT Sans Caption', sans-serif;
 	font-size: 15px;
 	line-height: 28px;
@@ -12,7 +13,17 @@
 	border-bottom: 2px solid #bfbfbf;
 }
 
-.block-footer .footer-list-item:last-child a {
+.footer-list-link::after {
+	position: absolute;
+	content: '';
+	width: 6px;
+	height: 10px;
+	top: 26px;
+	right: 0;
+	background: url("../../images/sprite.png") -234px -5px no-repeat;
+}
+
+.footer-list-item:last-child a {
 	border-bottom: none;
 }
 
