--- a/css/blocks/mailing.css
+++ b/css/blocks/mailing.css
@@ -8,13 +8,36 @@
 	line-height: 28px;
 	text-align: center;
 	text-transform: uppercase;
-	padding: 32px 0 25px;
+	color: #fff;
+	padding: 24px 0 18px;
+}
+.mailing-form {
+	font-size: 0;
+	padding-bottom: 33px;
+
+}
+
+.mailing-email {
+	float: left;
+	width: 176px;
+	display: inline-block;
+	vertical-align: top;
+	font-family: 'FedraSansPro-Light', sans-serif;
+	font-size: 14px;
+	line-height: 28px;
 }
 
 .mailing-submit {
+	float: right;
+	display: inline-block;
+	vertical-align: top;
+	padding: 2px 12px;
 	font-family: 'FedraSansPro-Light', sans-serif;
 	font-size: 14px;
 	line-height: 28px;
 	text-align: center;
 	text-transform: uppercase;
+	border: none;
+	color: #fff;
+	background-color: #606060;
 }
