--- a/css/blocks/star.css
+++ b/css/blocks/star.css
@@ -1,20 +1,37 @@
 .block-star {
+	margin-bottom: 31px;
 	background-color: #fff;
 	border-radius: 7px;
 }
 
 .star-description {
+	position: relative;
+	padding-top: 65px;
+	padding-bottom: 17px;
 	font-family: 'PT Sans Caption', sans-serif;
 	font-size: 16px;
 	line-height: 28px;
 	font-weight: normal;
 	text-align: center;
 }
+
+.star-description::after {
+	position: absolute;
+	content: '';
+	width: 177px;
+	height: 21px;
+	top: 30px;
+	left: 57px;
+	background: url("../../images/sprite.png") -48px -6px no-repeat;
+}
+
 .star-foto {
+	padding-bottom: 24px;
 	text-align: center;
 }
 
 .star-name {
+	padding-bottom: 24px;
 	font-family: 'FedraSansPro-Light', sans-serif;
 	font-size: 24px;
 	line-height: 28px;
