--- a/css/main.css
+++ b/css/main.css
@@ -16,9 +16,9 @@ h1 {font-size:36px; line-height:42px; color:#fff; font-weight:bold; font-family:
 h2 {font-size:24px; line-height:30px; color:#fff; font-weight:bold; font-family:'Arial'; margin:0px; padding:0px;}
 h3 {font-size:18px; line-height:24px; color:#fff; font-weight:bold; font-family:'Arial'; margin:0px; padding:0px;}
 menu {margin:0px; padding:0px; list-style-type:none;}
-ul {margin:25px 0px 25px 30px; padding:0px; list-style-type:disc;}
+ul {margin:0; padding:0px; list-style-type:disc;}
 ol {margin:25px 0px 25px 30px; padding:0px; list-style-type:decimal;}
-ol li, ul li {margin:0px; padding:0px;}
+ol li, ul li {margin:0px; padding:0px; list-style-type: none;}
 ol ol, ul ul {margin:6px 0px 6px 30px;}
 form {margin:0px; padding:0px;}
 button, input, select, textarea {outline:none; font-family:'arial';}
@@ -38,7 +38,7 @@ header {background:#efefef; width:100%;}
 
 
 /* Footer */
-footer {background:#efefef; width:100%; margin:-100px 0px 0px 0px;}
+/*footer {background:#efefef; width:100%; margin:-100px 0px 0px 0px;}*/
 
 
 
