--- a/css/css3.css
+++ b/css/css3.css
@@ -16,6 +16,9 @@
 @import "blocks/star.css"; 
 @import "blocks/pagination.css"; 
 @import "blocks/magazine.css";
+@import "blocks/priceuslugi.css";
+@import "blocks/specialist.css";
+@import "blocks/videoarchive.css";
 @import "blocks/price.css";
 @import "blocks/footer.css"; 
 @import "blocks/mailing.css"; 
