--- a/css/blocks/copyright.css
+++ b/css/blocks/copyright.css
@@ -1,4 +1,7 @@
 .block-copyright {
 	padding-bottom: 27px;
+	font-family: 'PTSansPro-LightItalic', sans-serif;
+	font-size: 15px;
+	line-height: 26px;	
 	text-align: center;
 }
