--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -63,9 +63,9 @@
 .header-navigation .menu-link {
 	display: block;
 	padding-bottom: 9px;
-	font-family: 'PT Sans Caption', sans-serif;
+	font-family: 'PTSansPro-Caption', sans-serif;
 	font-size: 14px;
-	line-height: 27px;
+	line-height: 36px;
 	font-weight: bold;
 	color: #fff;
 	text-transform: uppercase;
