--- a/css/blocks/price.css
+++ b/css/blocks/price.css
@@ -18,7 +18,6 @@
 }
 
 .price-category-title {
-	position: relative;
 	margin-bottom: 8px;
 	font-family: 'FedraSansPro-Normal', sans-serif;
 	font-size: 20px;
@@ -26,23 +25,27 @@
 	color: #000;
 }
 
-.price-category.services .price-category-title::after {
+.price-category-title span {
+	position: relative;
+}
+
+.price-category.services .price-category-title span::after {
 	position: absolute;
 	content: '';
 	width: 50px;
 	height: 69px;
 	top: -82px;
-	left: 122px;
+	left: 9px;
 	background: url("../../images/sprite.png") -868px -5px no-repeat;
 }
 
-.price-category.cosmeceuticals .price-category-title::after {
+.price-category.cosmeceuticals .price-category-title span::after {
 	position: absolute;
 	content: '';
 	width: 62px;
 	height: 67px;
 	top: -82px;
-	left: 122px;
+	left: 42px;
 	background: url("../../images/sprite.png") -684px -5px no-repeat;
 }
 
