--- a/css/blocks/social.css
+++ b/css/blocks/social.css
@@ -1,6 +1,8 @@
 .block-social {
+	width: 296px;
+	margin: 0 auto;
 	font-size: 0;
-	margin-bottom: 29px;
+	margin-bottom: 25px;
 	padding-top: 29px;
 }
 
