--- a/css/blocks/breadcrumbs.css
+++ b/css/blocks/breadcrumbs.css
@@ -1,5 +1,5 @@
 .block-breadcrumbs {
-	padding: 21px 0 15px;
+	padding: 21px 13px 15px 13px;
 	font-family: 'PT Sans Caption', sans-serif;
 	font-size: 13px;
 	line-height: 24px;
