--- a/css/blocks/services.css
+++ b/css/blocks/services.css
@@ -1,7 +1,13 @@
 .block-services {
-margin-bottom: 6px;
+	margin-bottom: 6px;
+	padding: 0 13px;
 }
 
+
+.services-title {
+	padding: 0 15px;
+	margin-bottom: 22px;
+}
 .services-items {
 	width: 296px;
 	margin: 0 auto;
@@ -17,13 +23,14 @@ margin-bottom: 6px;
 }
 
 .services-item.column2 {
-	margin-left: 18px;
+	margin-left: 32px;
 }
 
 .services-item-image {
 	width: 125px;
 	height: 126px;
 	margin: 0 auto;
+	margin-bottom: 9px;
 }
 
 .services-item-image.section1 {
