--- a/css/blocks/priceusluga.css
+++ b/css/blocks/priceusluga.css
@@ -1,10 +1,15 @@
 .block-priceusluga {
-	width: 320px;
+	min-width: 320px;
 	margin: 0 auto;
+}
+
+.priceusluga-title {
+	margin-bottom: 18px;
 }
 
 .priceusluga-table {
 	width: 100%;
+	margin-bottom: 40px;
 	font-family: 'PT Sans Caption', sans-serif;
 	font-size: 16px;
 	line-height: 22px;
@@ -16,13 +21,10 @@
 }
 
 .priceusluga-table th, .priceusluga-table td {
-
+	width: 33.33%;
+	padding: 7px 8px 9px 18px;
 	vertical-align: middle;
 	text-align: left;
-}
-
-.priceusluga-table .column1{
-	padding-left: 13px;
 }
 
 .priceusluga-table th {
