--- a/css/blocks/procedurs.css
+++ b/css/blocks/procedurs.css
@@ -1,3 +1,11 @@
+.block-procedurs {
+	margin-bottom: 31px;
+}
+
+.procedurs-title {
+	margin-bottom: 20px;
+}
+
 .procedurs-link { 
 	position: relative;
 	display: block;
