--- a/css/blocks/actions-slider.css
+++ b/css/blocks/actions-slider.css
@@ -3,6 +3,9 @@
 	padding-top: 23px;
 	border-bottom: 4px solid #fff;
 }
+.actions-slider-wrapper {
+	overflow: hidden;
+}
 
 .actions-slider-title {
 	padding: 0 10px;
@@ -68,17 +71,16 @@
 	height: 8px;
 }
 
-
 .block-actions-slider .slick-next {
 	top: 58px;
 	right: -5px;
-	z-index: 9999;
+	z-index: 999;
 }
 
 .block-actions-slider .slick-prev {
 	top: 58px;
-	left: -3px;
-	z-index: 9999;
+	left: -1px;
+	z-index: 999;
 }
 
 .block-actions-slider .slick-prev:before, .block-actions-slider .slick-next:before {
