--- a/css/css3.css
+++ b/css/css3.css
@@ -23,6 +23,8 @@
 @import "blocks/priceuslugi.css";
 @import "blocks/priceusluga.css";
 @import "blocks/iwant.css";
+@import "blocks/news.css";
+@import "blocks/news-one.css";
 @import "blocks/procedurs.css";
 @import "blocks/procedur.css";
 @import "blocks/specialist.css";
